# logic-sim

./: Cargo.toml  todo.md
assets/: build-font.sh  custom-msdf.json  makefile
assets/dot/: manifest.json
assets/gates/: manifest.json
benches/: circuit_evaluation.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/assets/src/font/: custom-msdf.json
crates/common/: Cargo.toml
crates/common/src/: stopwatch.rs
crates/util/: Cargo.toml
crates/util/src/: bounds.rs  handle.rs  stopwatch.rs
crates/vector/: Cargo.toml
crates/vector/src/: lib.rs
crates/vector/src/svg/: convert.rs
crates/vector/src/svg/convert/: error.rs
src/: app.rs  assets.rs  bin.rs  color.rs  game.rs  lib.rs  logic.rs  main.rs  render.rs  shader.wgsl  t.rs
src/app/: input.rs
src/game/: clickable.rs  game_loop.rs  input.rs  ui.rs
src/logic/: circuit.rs  gate.rs  hit_test.rs  solver.rs
src/logic/circuit/: connection.rs  edit_circuit.rs  element.rs  embedded.rs  examples.rs  render.rs  selection.rs  test.rs
src/render/: basic_mesh.rs  bindable.rs  camera.rs  frame.rs  geometry.rs  helpers.rs  img_texture.rs  line.rs  msdf.rs  quad.rs  scene.rs  vector.rs  vertex.rs
src/render/frame/: draw.rs  handle.rs  render_queue.rs  response.rs
src/render/frame/render_queue/: handles.rs
src/render/frame/response/: sprite_instance.rs  vector_instance.rs
src/render/line/: cubic_bezier.rs  geometry.rs  line_renderer.rs  shader.wgsl
src/render/msdf/: shader.wgsl  sprite_renderer.rs  text.rs
src/render/msdf/sprite/: sprite_sheet.rs
src/render/msdf/sprite_renderer/: handle.rs  instance.rs  sheet.rs  sprite_handle.rs  sprite_instance.rs
src/render/msdf/text/: font.rs  manifest.rs  text_object.rs
src/render/text/: msdf.rs
src/render/text/msdf/: manifest.rs  shader.wgsl  text_object.rs
src/render/vector/: draw_call_ordering.rs  instance.rs  lazy_instance.rs  renderer.rs  shader.wgsl  svg_convert.rs  svg_geometry.rs  tessellator.rs  vector_object.rs  vertex.rs  vertex_buffers.rs
src/ui/: button.rs
src/util/: bounds.rs  handle.rs  mod.rs
