[package]
name = "logic-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "logic_sim"
path = "src/lib.rs"

[[bin]]
name = "logic_sim"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["crates/util", "crates/assets", "crates/vector"]

[dependencies]
util = { path = "crates/util" }
assets = { path = "crates/assets" }
env_logger = "0.11.5"
bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
glam = { version = "0.29.0", features = ["bytemuck"] }
pollster = "0.3.0"
wgpu = "22.1.0"
winit = "0.30.5"
image = "0.25.2"
rand = "0.8.5"
lyon = "1.0.1"
usvg = "0.44.0"
rayon = { version = "1.10.0", optional = true }
miniserde = "0.1.40"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "circuit_evaluation"
harness = false

[features]
rayon = ["dep:rayon"]
debug_draw = []

[profile.release]
debug = true
strip = false

[profile.bench]
debug = true
strip = false
