[package]
name = "logic-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "logic_sim"
path = "src/lib.rs"

[[bin]]
name = "logic_sim"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["crates/common", "crates/assets", "crates/vector"]

[dependencies]
common = { path = "crates/common" }
assets = { path = "crates/assets" }
vector = { path = "crates/vector" }
env_logger = "0.11.5"
bytemuck = { version = "1.18.0", features = ["derive", "min_const_generics"] }
glam = { version = "0.29.0", features = ["bytemuck"] }
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.5"
image = "0.25.2"
rand = "0.8.5"
lyon = "1.0.16"
usvg = "0.47.0"
rayon = { version = "1.10.0", optional = true }
miniserde = "0.1.40"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "circuit_evaluation"
harness = false

[features]
rayon = ["dep:rayon"]
debug_draw = []

[profile.release]
debug = true
strip = false

[profile.bench]
debug = true
strip = false
